--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,8 +2,11 @@
 import { SITE } from 'astrowind:config';
 ---
 
-<span
-  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
->
-  🚀 {SITE?.name}
-</span>
+<img 
+  src="/images/lc_coaching_logo_clean.png" 
+  alt="Laure Cohen Coaching" 
+  class="h-10 md:h-12 w-auto transition-all duration-300 hover:scale-105"
+  loading="eager"
+  width="200"
+  height="48"
+/>
